Reopen feature branch

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <li>GitHub</li>
             <li>Git Commands</li>
             <li>HTML basics</li>
+            <p>Feature branch wieder unmerged</p>
         </ul>
     </body>
 </html>
