Add nav and list

--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="de-de">
     <head>
-        <title>neuefische first steps</title>
+        <title>HTML Test</title>
     </head>
     <body>
         <h1>
-            neuefische first steps:
+            Hallo fische
         </h1>
-        <ul>
-            <li>Git</li>
-            <li>GitHub</li>
-            <li>Git Commands</li>
-            <li>HTML basics</li>
-            <p>Feature branch wieder unmerged</p>
-        </ul>
+        <nav>
+            <ul>
+                <li>
+                    SHELL
+                </li>
+                <li>
+                    GIT
+                </li>
+                <li>
+                    HTML
+                </li>
+            </ul>
+        </nav>
     </body>
 </html>
