Add favicon, details and emojis

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="de-de">
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="images/favicon.ico">
         <title>HTML Test</title>
     </head>
     <body>
         <h1>
-            Hallo fische
+            Hallo neuefische
         </h1>
         <nav>
             <ul>
@@ -20,5 +23,9 @@
                 </li>
             </ul>
         </nav>
+        <details>
+            <summary>Emojis</summary>
+            Something small enough to escape casual notice. &#x1F600; &#x1F41F; 😃😃
+        </details>
     </body>
 </html>
