Add bootstrap nav, card, jumbo

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html lang="de-de">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -13,8 +16,27 @@
     <title>HTML Test</title>
   </head>
   <body>
-    <h1>Hallo neuefische!</h1>
-    <nav>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1 class="display-4">Hallo neuefische!</h1>
+        <p class="lead">
+          This is a modified jumbotron that occupies the entire horizontal space
+          of its parent.
+        </p>
+      </div>
+    </div>
+    <ul class="nav nav-pills justify-content-center">
+      <li class="nav-item">
+        <a class="nav-link active" href="#shell">SHELL</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#git">GIT</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" href="#html">HTML</a>
+      </li>
+    </ul>
+    <!-- <nav>
       <ul>
         <li>
           <a href="#shell">SHELL</a>
@@ -26,7 +48,7 @@
           <a href="#html">HTML</a>
         </li>
       </ul>
-    </nav>
+    </nav> -->
     <section id="shell">
       <h2>SHELL</h2>
       <p>
@@ -143,6 +165,17 @@
     </section>
     <section id="git">
       <h2>GIT</h2>
+      <div class="card" style="width: 18rem">
+        <img src="images/Download.jpeg" class="card-img-top" alt="Git Merge" />
+        <div class="card-body">
+          <h5 class="card-title">Git Merge</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <a href="#top" class="btn btn-primary">Go to the top</a>
+        </div>
+      </div>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dolores,
         dignissimos ipsa eligendi corrupti itaque voluptatem facilis modi, fuga
@@ -371,7 +404,10 @@
       <summary>Emojis</summary>
       Something small enough to escape casual notice. &#x1F600; &#x1F41F; 😃😃
     </details>
-    <p><a href="#top">Page up</a></p>
+    <button type="button" class="btn btn-secondary btn-lg btn-block">
+      <a href="#top">Page up</a>
+    </button>
+    <!-- <p><a href="#top">Page up</a></p> -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
