--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
       <summary>Emojis</summary>
       Something small enough to escape casual notice. &#x1F600; &#x1F41F; 😃😃
     </details>
-    <button type="button" class="btn btn-secondary btn-lg btn-block">
+    <button type="button" class="btn btn-info btn-block">
       <a href="#top">Page up</a>
     </button>
     <!-- <p><a href="#top">Page up</a></p> -->
